#505 change async ingestion for hdfs/hive